  |              would make clients incompatible with previous clients or
  |              proxies will be a accompanied by 'client contest' change.
  `------------- Denotes a client rewrite.

Note: #xxxx refers to bug numbers as viewable on http://bugs.distributed.net/

==========================================================================
Version change log: $Id: CHANGES.txt,v 1.120 2012/01/08 20:45:17 snikkel Exp $
==========================================================================

2.9100
------

2.9110.519  new: amd64: New GO-2c core
            new: amd64: New GO-2d core
            chg: amd64: Core pre-selection for most processors
            imp: x86/amd64: Intel Sandy Bridge detection/selection
            fix: x86: OGR core pre-selection for Intel Core iX (#4376)
            imp: x86/amd64: AMD APU detection/selection (#4429)
            imp: amd64: Via Nano core selection (#4437)
            imp: x86/amd64: AMD Opeteron 6xxx detection/selection (#4438)
            fix: cuda: processor counts for newer model fermi cards (#4441)
            imp: win: allow CUDA/Stream to coexist (#4274)
            imp: gpu: rename -cpuinfo to -gpuinfo
            chg: all: increase max threads to 512
            imp: x86/amd64: Intel Sandy Bridge EE (#4456)

2.9109.518  fix: all: OGR-NG codebase fixes (#4295)
            fix: all: OGR-NG incorrect node count after full restart
                 of combined stub (#4290)
            imp: all: a kind of stress test for OGR-NG
            imp: cellbe: faster OGR-NG SPU ASM core
            imp: all: log errors to file during tests and buffer update
            fix: x86: possible division by zero in cpuinfo
            imp: x86: CPU detect and core select updates (#4297,#4299,#4301)
            imp: x86: AMD Opteron/Phenom detection (#4326,#4256,#4370)
            fix: all: logging issues with more then 26 crunchers (#4345)
            imp: ppc: recognize more PowerPC processors (#4349)