@@ -10,7 +10,7 @@
  *
 */
 const char *cpucheck_cpp(void) {
-return "@(#)$Id: cpucheck.cpp,v 1.202 2012/01/08 20:45:18 snikkel Exp $"; }
+return "@(#)$Id: cpucheck.cpp,v 1.203 2012/01/09 01:45:38 snikkel Exp $"; }
 
 #include "cputypes.h"
 #include "baseincs.h"  // for platform specific header files
@@ -1223,6 +1223,7 @@ long __GetRawProcessorID(const char **cpuname, int whattoret = 0 )
         { 0x000F000, 0xFFFF000, CPU_F_I686,    9, "Athlon (Model 15)" },
         { 0x0010000, 0xFFFF000, CPU_F_I686, 0x16, "Opteron 6xxx" }, /* (#4438) */
         { 0x0014000, 0xFFFF000, CPU_F_I686, 0x20, "E-Series APU" }, /* (#4429) */
+        { 0x0015010, 0xFFFF000, CPU_F_I686, 0x21, "FX" }, /* (#4455) */
         { 0x010F000, 0xFFFF000, CPU_F_I686,    9, "Athlon 64",              0 /* CH_R72_X86_GO2B */ }, /* (#4193) */
         { 0x020F000, 0xFFFF000, CPU_F_I686,    9, "Athlon 64 X2 Dual Core", CH_R72_X86_GO2B }, /* (#4193) */
         { 0x030F000, 0xFFFF000, CPU_F_I686,    9, "Mobile Athlon 64" },
@@ -1247,6 +1248,7 @@ long __GetRawProcessorID(const char **cpuname, int whattoret = 0 )
          *   0x18 - Via Nano
          *   0x19 - Sandy Bridge Core i3/i5/i7
          *   0x20 - AMD E-Series
+         *   0x21 - AMD FX
          */
         { 0x080F000, 0xFFFF000, CPU_F_I686,    9, "Mobile Sempron" },
         { 0x090F000, 0xFFFF000, CPU_F_I686,    9, "Sempron",           CH_R72_X86_GO2B }, /* (#4193) */
