@@ -23,7 +23,7 @@ Version bump guide:
 Note: #xxxx refers to bug numbers as viewable on http://bugs.distributed.net/
 
 ==========================================================================
-Version change log: $Id: CHANGES.txt,v 1.120 2012/01/08 20:45:17 snikkel Exp $
+Version change log: $Id: CHANGES.txt,v 1.121 2012/01/09 01:45:37 snikkel Exp $
 ==========================================================================
 
 2.9100
@@ -42,6 +42,7 @@ Version change log: $Id: CHANGES.txt,v 1.120 2012/01/08 20:45:17 snikkel Exp $
             imp: gpu: rename -cpuinfo to -gpuinfo
             chg: all: increase max threads to 512
             imp: x86/amd64: Intel Sandy Bridge EE (#4456)
+            imp: x86/amd64: AMD FX (#4455)
 
 2.9109.518  fix: all: OGR-NG codebase fixes (#4295)
             fix: all: OGR-NG incorrect node count after full restart
